testdata/baselines/reference/submodule/conformance/classWithStaticFieldInParameterBindingPattern.2(target=es2015).errors.txt
classWithStaticFieldInParameterBindingPattern.2.ts(3,6): error TS2537: Type '{}' has no matching index signature for type 'number'.
classWithStaticFieldInParameterBindingPattern.2.ts(6,6): error TS2537: Type '{}' has no matching index signature for type 'number'.


==== classWithStaticFieldInParameterBindingPattern.2.ts (2 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    class C {}
    (({ [class extends C { static x = 1 }.x]: b = "" }) => { var C; })();
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2537: Type '{}' has no matching index signature for type 'number'.
    
    const x = "";
    (({ [class extends C { static x = 1 }.x]: b = "" }, d = x) => { var x; })();
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2537: Type '{}' has no matching index signature for type 'number'.
    